vortex-btrblocks/tests/snapshots/golden__default__int_monotone_jitter.snap
---
source: vortex-btrblocks/tests/golden.rs
expression: rendered
---
input: u64, len=16384, nbytes=131072
root: vortex.block_residual(u64, len=16384) nbytes=41324
  metadata: blocks: 16, slice: 0..16384
