vortex-btrblocks/tests/snapshots/golden__default__string_low_cardinality.snap
---
source: vortex-btrblocks/tests/golden.rs
expression: rendered
---
input: utf8, len=16384, nbytes=262144
root: vortex.dict(utf8, len=16384) nbytes=8306
  metadata: all_values_referenced: true
  codes: fastlanes.bitpacked(u8, len=16384) nbytes=8192
    metadata: bit_width: 4, offset: 0
  values: vortex.varbin(utf8, len=12) nbytes=114
    metadata: 
    offsets: vortex.primitive(i32, len=13) nbytes=52
      metadata: ptype: i32
