vortex-btrblocks/tests/snapshots/golden__default__temporal_timestamp_micros.snap
---
source: vortex-btrblocks/tests/golden.rs
expression: rendered
---
input: vortex.timestamp[µs, tz=UTC](i64), len=16384, nbytes=131072
root: vortex.ext(vortex.timestamp[µs, tz=UTC](i64), len=16384) nbytes=59520
  metadata: 
  storage: fastlanes.blockedfor(i64, len=16384) nbytes=59520
    metadata: offset: 0
    encoded: fastlanes.bitpacked(i64, len=16384) nbytes=59392
      metadata: bit_width: 29, offset: 0
    references: vortex.primitive(i64, len=16) nbytes=128
      metadata: ptype: i64
